#
# Copyright 2016, NICTA
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(NICTA_BSD)
#

[package]
name = "main"
version = "0.0.1"
authors = ["Kent McLeod <kent.mcleod@data61.csiro.au>"]
description = "A rust camkes component that uses bindgen and a rpc interface"
build = "build.rs"

[lib]
name = "main"
path = "src/main.rs"
crate-type = ["staticlib"]


[build-dependencies]
bindgen = "0.17.0"

[dependencies]
